# warp-embed

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: test-embedded.rs
src/: lib.rs  test.rs
