[package]
name = "warp-embed"
version = "0.2.0"
authors = ["Okamura Yasunobu <okamura@informationsea.info>"]
edition = "2018"
license = "Apache-2.0"
description = "provides embedded files by warp"
readme = "README.md"
homepage = "https://github.com/informationsea/warp-embed"
repository = "https://github.com/informationsea/warp-embed"
keywords = ["embedded-file", "warp"]
categories = ["web-programming::http-server"]

[dependencies]
warp = "0.3"
rust-embed = "5"
mime_guess = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4"
log = "0.4"
clap = "2"